--- a/Pizzaria/View/Base.lproj/Main.storyboard
+++ b/Pizzaria/View/Base.lproj/Main.storyboard
@@ -436,7 +436,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ljc-DR-vng" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-71.200000000000003" y="2310.4947526236883"/>
+            <point key="canvasLocation" x="-1082" y="3068"/>
         </scene>
         <!--Telefones-->
         <scene sceneID="Dbl-lh-atu">
@@ -488,6 +488,35 @@
             </objects>
             <point key="canvasLocation" x="-1082" y="2312"/>
         </scene>
+        <!--Mapa View Controller-->
+        <scene sceneID="PJJ-4x-o20">
+            <objects>
+                <viewController id="4ct-h7-5ar" customClass="MapaViewController" customModule="Pizzaria" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="M8v-MJ-MZV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="e4l-eR-5DI">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="e4l-eR-5DI" secondAttribute="bottom" id="7EF-c2-SZr"/>
+                            <constraint firstItem="e4l-eR-5DI" firstAttribute="top" secondItem="2ax-qn-RKn" secondAttribute="top" id="Adc-mR-X0M"/>
+                            <constraint firstItem="e4l-eR-5DI" firstAttribute="trailing" secondItem="2ax-qn-RKn" secondAttribute="trailing" id="IhA-vL-6SH"/>
+                            <constraint firstItem="e4l-eR-5DI" firstAttribute="leading" secondItem="2ax-qn-RKn" secondAttribute="leading" id="ibt-AR-XCG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2ax-qn-RKn"/>
+                    </view>
+                    <connections>
+                        <outlet property="mapa" destination="e4l-eR-5DI" id="OlU-VR-Mxo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fSR-p0-ogW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-71.200000000000003" y="2310.4947526236883"/>
+        </scene>
         <!--Endereços-->
         <scene sceneID="LH2-IU-pcw">
             <objects>
@@ -498,32 +527,26 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <color key="separatorColor" cocoaTouchSystemColor="darkTextColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="listaEnderecos" textLabel="8Op-Es-Ts8" detailTextLabel="B7r-YO-zzW" style="IBUITableViewCellStyleValue1" id="VeT-hz-lW8">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="listaEnderecos" id="VeT-hz-lW8" customClass="EnderecoTableViewCell" customModule="Pizzaria" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VeT-hz-lW8" id="QJh-9b-YYR">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8Op-Es-Ts8">
-                                            <rect key="frame" x="16" y="12" width="36.5" height="20.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="B7r-YO-zzW">
-                                            <rect key="frame" x="311" y="12" width="48" height="20.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DBP-uQ-dTR">
+                                            <rect key="frame" x="317" y="6" width="41" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <state key="normal" title="Mapa">
+                                                <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </state>
+                                        </button>
                                     </subviews>
                                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="uVf-iW-hpe" kind="show" identifier="editarEndereco" id="UjD-JO-Acg"/>
+                                    <segue destination="uVf-iW-hpe" kind="show" identifier="editarEndereco" id="aL6-ew-pll"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -533,7 +556,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Endereços" id="l52-a9-oIr">
-                        <barButtonItem key="backBarButtonItem" title="Cancelar" id="sSJ-bc-dfq"/>
+                        <barButtonItem key="backBarButtonItem" title="Voltar" id="sSJ-bc-dfq"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="VKA-wG-Crt">
                             <connections>
                                 <segue destination="uVf-iW-hpe" kind="show" identifier="criarEndereco" id="0TH-TN-Nl8"/>
@@ -543,7 +566,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4A6-Ij-gIX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-71" y="1522"/>
+            <point key="canvasLocation" x="-71.200000000000003" y="1521.5892053973014"/>
         </scene>
         <!--Cliente-->
         <scene sceneID="xjl-hE-QVl">
@@ -1065,6 +1088,6 @@
         <segue reference="0HP-2C-Rti"/>
         <segue reference="JNj-9C-6S2"/>
         <segue reference="LBZ-yh-Hvi"/>
-        <segue reference="UjD-JO-Acg"/>
+        <segue reference="aL6-ew-pll"/>
     </inferredMetricsTieBreakers>
 </document>
